--- a/DjangoPractic/registration/templates/base.html
+++ b/DjangoPractic/registration/templates/base.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'registration/css/style.css' %}">
     <script src="{% static 'registration/js/jquery-3.5.1.min.js' %}"></script>
+    <script src="{% static 'registration/js/jquery.maskedinput.min.js' %}"></script>
     <script>
       $(document).ready(function() {
         document.getElementsByTagName("html")[0].style.visibility = "visible";
