--- a/DjangoPractic/registration/templates/login.html
+++ b/DjangoPractic/registration/templates/login.html
@@ -7,7 +7,7 @@
 	<div class="screen">
 		<div class="screen__content">
 			{% if error_message %}
-            	<label class="alertError">
+            	<label class="alertError animate fadeInDown two">
   				<input type="checkbox" class="alertCheckbox" autocomplete="off" />
   					<div class="alert error">
     					<span class="alertClose">X</span>
